Added Contact section

--- a/index.html
+++ b/index.html
@@ -65,24 +65,20 @@
             <h1 id="skills__title" class="hidden">Skills</h1>
             <ul id="skills__list">
                 
-                <li class="hidden">Web Development
+                <li class="hidden">Languages
                     <ul>
-                        <li>HTML, CSS & Javascript</li>
-                        <li>React & Nextjs</li>
-                        <li>Firebase</li>
+                        <li>Python3</li>
+                        <li>C++</li>
+                        <li>HTML, CSS, Javascript</li>
                     </ul>
                 </li>
-                <li class="hidden">C++
+                <li class="hidden">Technologies
                     <ul>
                         <li>Object Oriented Programming</li>
-                        <li>Pointers</li>
-                    </ul>
-                </li>
-                <li class="hidden">Python
-                    <ul>
-                        <li>Pygame</li>
-                        <li>Sockets</li>
-                        <li>Discord API</li>
+                        <li>NextJs</li>
+                        <li>Material UI</li>
+                        <li>Firebase</li>
+                        <li>Git & Github</li>
                     </ul>
                 </li>
                 <li class="hidden">Data Structures &
