Updated Project Section

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div id="projects__section">
         <h1 id="projects__title">Projects</h1>
         <div id="card__grid">
-            <a href="https://github.com/alexkmnsky/building-capacity-manager" target="_blank" class="card">
+            <a href="https://devpost.com/software/building-capacity-manager" target="_blank" class="card">
                 <h2>Building Capacity Manager</h2>
                 <img src="/icons/city.png">
             </a>
@@ -108,9 +108,13 @@
                 <h2>Asteroids</h2>
                 <img src="/icons/asteroid.png">
             </a>
-            <a href="https://github.com/Maxwell-Hunt/Canadian-Computing-Competition-CCC-Solutions" target="_blank" class="card">
-                <h2>Competitive Programming</h2>
-                <img src="/icons/algo.png">
+            <a href="https://devpost.com/software/libre-quiz" target="_blank" class="card">
+                <h2>LibreQuiz</h2>
+                <img src="/icons/poll.png">
+            </a>
+            <a href="https://github.com/SSSCodingClub/BlackjackDiscordBot" target="_blanck" class="card">
+                <h2>Blackjack Discord Bot</h2>
+                <img src="/icons/cards.png">
             </a>
         </div>
     </div>
