--- a/index.html
+++ b/index.html
@@ -67,24 +67,26 @@
                 
                 <li class="hidden">Languages
                     <ul>
-                        <li>Python3</li>
-                        <li>C++</li>
                         <li>HTML, CSS, Javascript</li>
+                        <li>Python3</li>
+                        <li>Java</li>
+                        <li>C & C++</li>
                     </ul>
                 </li>
                 <li class="hidden">Technologies
                     <ul>
-                        <li>Object Oriented Programming</li>
                         <li>NextJs</li>
-                        <li>Material UI</li>
                         <li>Firebase</li>
+                        <li>Numpy</li>
+                        <li>Tensorflow</li>
                         <li>Git & Github</li>
                     </ul>
                 </li>
-                <li class="hidden">Data Structures &
-                    Algorithms
+                <li class="hidden">Important Skills
                     <ul>
-                        <li>Over 250 problems solved on Leetcode</li>
+                        <li>Data Structures and Algorithms</li>
+                        <li>Object Oriented Programming</li>
+                        <li>Functional Programming</li>
                     </ul>
                 </li>
             </ul>
