tested something out

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <p id="about__paragraph">
             Hey, I'm Max! I'm a computer science major at the University of Waterloo looking to use my skills
             to help you and your company out. Ever since I was very young, I have loved learning about new things
-            and, for the past five years, I have taken a special interest in Programming. I never see challenges as
+            and, for the past five years, I have taken a special interest in Programming.. I never see challenges as
             problems but rather as opportunities to grow, learn, and improve at what I love to do. 
         </p>
     </div>
