Add basic html structure for contact section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
         <div id="skills__area">
             <h1 id="skills__title" class="hidden">Skills</h1>
             <ul id="skills__list">
-                
                 <li class="hidden">Languages
                     <ul>
                         <li>HTML, CSS, Javascript</li>
@@ -122,15 +121,19 @@
     </div>
     <div id="contact__section">
         <h1 id="contact__title">Contact</h1>
-        <hr/>
-        <div id="contact__container">
-            <ul id="contact__info">
-                <li><a>max101hunt@gmail.com</a></li>
-                <li><a>647-518-8499</a></li>
-                <li><a href="https://github.com/Maxwell-Hunt">github.com/Maxwell-Hunt</a></li>
-                <li><a href="https://www.linkedin.com/in/maxwell-hunt/">linkedin.com/in/maxwell-hunt</a></li>
-            </ul>
-        </div>
+        <ul id="contact__links">
+            <li>max101hunt@gmail.com</li>
+            <li>647-518-8499</li>
+            <li><a href="github.com/Maxwell-Hunt">Maxwell-Hunt</a></li>
+            <li><a href="https://www.linkedin.com/in/maxwell-hunt/">Linkedin Profile</a></li>
+        </ul>
+        <form>
+            <label>Name</label>
+            <input type="text">
+            <label>Message</label>
+            <input type="text">
+            <button type="submit">SEND</button>
+        </form>
     </div>
 </body>
 <script src="landingcanvas.js"></script>
