Add Icons for Contact Methods

--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
         <div id="contact__area__container">
             <div id="contact__area">
                 <ul id="contact__links">
-                    <li class="contact__item">max101hunt@gmail.com</li>
-                    <li class="contact__item">647-518-8499</li>
-                    <li class="contact__item"><a href="github.com/Maxwell-Hunt">Maxwell-Hunt</a></li>
-                    <li class="contact__item"><a href="https://www.linkedin.com/in/maxwell-hunt/">Linkedin Profile</a></li>
+                    <li class="contact__item"><img src="Project photos/mail-icon.png">max101hunt@gmail.com</li>
+                    <li class="contact__item"><img src="Project photos/phone-icon.png">647-518-8499</li>
+                    <li class="contact__item"><img src="Project photos/github-icon.png"><a href="github.com/Maxwell-Hunt">Maxwell-Hunt</a></li>
+                    <li class="contact__item"><img src="Project photos/linkedin-icon.png"><a href="https://www.linkedin.com/in/maxwell-hunt/">Linkedin Profile</a></li>
                 </ul>
                 <form>
                     <h2>Name</h2>
